kubernetes/argocd/kapowarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kapowarr
  namespace: kapowarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kapowarr.home.neels.tech`)
      services:
        - name: kapowarr-tcp
          port: 80
  tls:
    secretName: kapowarr-home-neels-tech-tls
